k8s/payments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: payments
