k8s/payments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payments-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/payments
            pathType: "Prefix"
            backend:
              service:
                name: payments-service
                port:
                  number: 80
